src/objects/Route_Log__c.object
<CustomObject>
    <description>Stores case routing attempt records with their outcomes (errors and successes)</description>
    <fields>
        <fullName>Case__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Case</label>
        <referenceTo>Case</referenceTo>
        <relationshipLabel>Route Logs</relationshipLabel>
        <relationshipName>Route_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CurrentQueue__c</fullName>
        <label>Current Queue</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Standard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Expedited</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ProfileName__c</fullName>
        <label>Profile Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QueueName__c</fullName>
        <label>Queue Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoleName__c</fullName>
        <label>Role Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RouteStatus__c</fullName>
        <formula>IF( ISBLANK( RoutingConfiguration__c ) , &quot;Failures&quot;, &quot;Successes&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Route Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RoutingConfiguration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Routing Configuration #</label>
        <referenceTo>Routing_Configuration__c</referenceTo>
        <relationshipLabel>Route Logs</relationshipLabel>
        <relationshipName>Route_Logs</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RoutingPriority__c</fullName>
        <label>Priority Routing</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ServiceLevel__c</fullName>
        <label>Service Level</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SortOrder__c</fullName>
        <label>Sort Order</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>None</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Subtype__c</fullName>
        <globalPicklist>Subtype</globalPicklist>
        <label>Subtype</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Topic1__c</fullName>
        <globalPicklist>Topic</globalPicklist>
        <label>Topic</label>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <globalPicklist>Type</globalPicklist>
        <label>Type</label>
        <type>Picklist</type>
    </fields>
    <label>Route Log</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Case__c</columns>
        <columns>RoutingConfiguration__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All Route Logs</label>
    </listViews>
    <nameField>
        <displayFormat>RL-{0000000000}</displayFormat>
        <label>RL #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Route Logs</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>